<resources>
    <string name="app_name">Gitify</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="search">Search</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="github_url">GITHUB_URL</string>
    <string name="angka">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repositories">Repos</string>
    <string name="bio">Bio</string>
    <string name="check_connection_warning">Please check your network connection.</string>
    <string name="disconnected">Disconnected</string>
    <string name="info_no_connection">Oops, No internet connection</string>
    <string name="info_no_connection_2">Make sure wifi or cellular data is turned on and try again.</string>
    <string name="info_not_found">Sorry, no result found</string>
    <string name="info_not_found_2">What you searched was unfortunately not found or doesn\'t exist.</string>
    <string name="not_found">Not Found</string>
    <string name="favorite">Favorite</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="settings">Settings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="info_empty">Woah, it still empty</string>
    <string name="info_empty_2">There is no favorite users yet.</string>
    <string name="github_favorite_users">GitHub Favorite Users</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="refresh">Refresh</string>
    <string name="avatar">Avatar</string>
    <string name="daily_on">Daily reminder turned on</string>
    <string name="daily_off">Daily reminder turned off</string>
    <string name="gitify_daily">Gitify Daily</string>
    <string name="check_out_daily">Check out gitify today!</string>
</resources>