<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/banner_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gh_dark"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/github_favorite_users"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/gh_dark_gray"
            android:contentDescription="@string/refresh"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_refresh_24" />
    </LinearLayout>

    <StackView
        android:id="@+id/stack_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/banner_group"
        android:loopViews="true" />


    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/banner_group"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/gh_dark"
        android:gravity="center"
        android:text="@string/info_empty_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />
</RelativeLayout>